# candystore

./: .env.example  .gitignore  AGENTS.md  GOD.md  README.md  mise.toml  pyproject.toml
docs/: IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  VERIFICATION_CHECKLIST.md
scripts/: start.sh
src/candystore/: __init__.py  api.py  cli.py  config.py  consumer.py  database.py  logging_config.py  main.py  metrics.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_database.py
